css/main.css
/* CSS of the main page. Anything outside #pages-container */

/* This is the topmost element that covers the entire screen. */
#whole-screen-div{
  overflow:hidden;
}

:root{
  /* Main Content Div spacing calculations */
  /* These margins are applied at first. */
  /* If there is space left over, we try to equalize the margins first */
  /* And if space is still left over, it is distributed to both sides equally. */
  --mcd-left:192px;
  --mcd-right:64px;
  
  --mcd-difference: calc(var(--mcd-left) - var(--mcd-right));
  --mcd-margins: calc(var(--mcd-left) + var(--mcd-right));
  --mcd-width: min(calc(100vw - var(--mcd-margins)), 1000px);
  --mcd-space-around: calc(100vw - var(--mcd-width));
  --mcd-space-excess: calc( var(--mcd-space-around) - var(--mcd-margins));
  --mcd-space-equalize: min(var(--mcd-space-excess),var(--mcd-difference));
  --mcd-space-distributed: calc((var(--mcd-space-excess) - var(--mcd-space-equalize)) /2 );
  --mcd-margin-left: calc(var(--mcd-left) + var(--mcd-space-distributed));
  --mcd-margin-right: calc(var(--mcd-right) + var(--mcd-space-equalize) + var(--mcd-space-distributed));
  
  /* Below assumes 2% gradient on each side.*/
  --mcd-inner-width: calc(var(--mcd-width) * 0.96);
  
  
  /* MalangPony logo positioning */
  /* It's a bit complicated due to it being sticky at the bottom */

  /* Margin from main container */
  --intrologo-side-margins: 32px; 
  /* Roughly match the logo aspect ratio*/
  --intrologo-aspect-ratio:2.5; 
  /* Max height of logo. */
  --intrologo-max-height:50svh;
  /* The center position of logo, measured from the top of the screen.*/
  --intrologo-center-height-from-top:35svh;
  
  /* Automatically calculated values */
  --intrologo-max-width: calc(var(--mcd-inner-width) - ( var(--intrologo-side-margins) *2 ));
  --intrologo-height:min(
    400px, 
    var(--intrologo-max-height), 
    calc(var(--intrologo-max-width) / var(--intrologo-aspect-ratio)));
  /* Set the bottom margin so it sticks until reaching a certain scroll progress. */
  --intrologo-bottom-margin:calc(100svh - ( var(--intrologo-height) /2 ) - var(--intrologo-center-height-from-top));
}

/* contains blanker and afterscroll */
#main-content-backdrop{
  
  width:var(--mcd-width);
  margin-left:var(--mcd-margin-left);
  margin-right:var(--mcd-margin-right);
  
  position:relative;
  display:flex;
  flex-direction:column;
  
}

/* MainContentBackdrop Backgrounds */
.dark-mode #main-content-backdrop:not(.on-intro-page){
  --mcb-glow-opacity:30%;
  --mcb-edge-opacity:60%;
  --mcb-center-opacity:50%;
  --mcb-color:#000;
}
.dark-mode #main-content-backdrop.on-intro-page{
  --mcb-glow-opacity:30%;
  --mcb-edge-opacity:70%;
  --mcb-center-opacity:60%;
  --mcb-color:#000;
}
.light-mode #main-content-backdrop:not(.on-intro-page){
  --mcb-glow-opacity:30%;
  --mcb-edge-opacity:60%;
  --mcb-center-opacity:50%;
  --mcb-color:#FFF;
}
.light-mode #main-content-backdrop.on-intro-page{
  --mcb-glow-opacity:30%;
  --mcb-edge-opacity:80%;
  --mcb-center-opacity:70%;
  --mcb-color:#FFF;
}
@property --mcb-opacity {
  syntax:"<number>";
  inherits:false;
  initial-value:0;
}
@property --mcb-color {
  syntax:"<color>";
  inherits:false;
  initial-value:#000;
}
#main-content-backdrop{
  transition-property: --mcb-opacity, --mcb-color;
  transition-duration:0.5s;
}
#main-content-backdrop.activated{
  --mcb-opacity:1.0;
}
#main-content-backdrop{
  background-image: linear-gradient(
    to right,
    hsl(from var(--mcb-color) h s l / 0%                                                  )   0%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-glow-opacity)  ))   2%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-edge-opacity)  ))   2%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-center-opacity)))  20%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-center-opacity)))  80%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-edge-opacity)  ))  98%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-glow-opacity)  ))  98%,
    hsl(from var(--mcb-color) h s l / 0%                                                  ) 100%);
  padding-left:2%;
  padding-right:2%;
}
.mobile-mode #main-content-backdrop{
  background-image: linear-gradient(
    to right,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-edge-opacity)  ))   0%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-center-opacity)))  20%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-center-opacity)))  80%,
    hsl(from var(--mcb-color) h s l / calc(var(--mcb-opacity) * var(--mcb-edge-opacity)  )) 100%);
  padding-left:0;
  padding-right:0;
}


/* Contains all scrollable content. */
#content-scroller{
	position:absolute;
	bottom:0;
    right:0;
    left:0;
    top:0;
    z-index:10;
	overflow-y:scroll;
	overflow-x:hidden;
}

/* Make sure afterscroll content is not visible at the start */
#screen-blanker{
  height:min(200lvh,2000px);
}

#nonintro-header-content{
  display:flex;
  flex-direction:row;
  justify-content:flex-end;;
  align-items:flex-start;
  
  position:absolute;
  top:0;
  left:0;
  right:16px;
  height:200px;
  z-index:1;
}
.on-intro-page #nonintro-header-content{
  display:none;
}
#logo-header{
  max-height:130px;
  max-width:80%;
  margin-bottom:32px;
}

#main-content-actual{
  padding-top:96px;
  position:relative;
  display:flex;
  flex-direction:column;
  align-self:stretch;
  min-height:100svh;
}
.on-intro-page #main-content-actual{
  min-height: calc(100svh - var(--intrologo-height))
}

#main-content-filler{
  flex-grow:1;
}

/* Actual content after scrolling. */
#pages-container{
  
  align-self:stretch;
  display:flex;
  flex-direction:column;
  filter:brightness(30%);
  transition-property: filter;
  transition-duration:0.5s;
  position:relative;
  padding-left:32px;
  padding-right:32px;
  --pages-actual-width:calc(var(--mcd-inner-width) - 64px);
}
#pages-container.activated{
  filter:none;
}


#intro-logo{
  align-self:center;
  position:sticky;
  aspect-ratio:var(--intrologo-aspect-ratio);
  bottom:var(--intrologo-bottom-margin);
  height:var(--intrologo-height);
  display:none;
}
.on-intro-page #intro-logo{
  display:block;
}
#intro-logo > img{
  position:absolute;
  left:0;
  top:0;
  right:0;
  bottom:0;
  width:100%;
  height:100%;
  object-fit:contain;
}


/* Sky color */
#sky-bg{
  background: linear-gradient(0deg,#181365,#4f3773,#6d4c79);
}

/* Scroll-inviter */
#scroll-inviter-container{
  position:absolute;
  top:70lvh;
  left:0;
  right:0;
  display:flex;
  flex-direction:row;
  justify-content:center;
}
@keyframes scroll-inviter-anim{
  from{
    margin-top:0px;
    opacity:0.5;
  }
  to{
    margin-top:24px;
    opacity:0.8;
  }
  
}
#scroll-inviter{
  animation-name:scroll-inviter-anim;
  animation-direction:alternate;
  animation-duration:1.5s;
  animation-iteration-count:infinite;
  animation-timing-function: ease-in-out;
  
  color:var(--color-text-light);
  font-weight:700;
  
  display:flex;
  flex-direction:row;
  align-items:center;
  justify-content:center;
  gap:8px;
}
.si-text{
  font-size:1.5em;
}
.si-arrow{
  font-size:4em;
  opacity:0.8;
}

/* Footer */
.main-content-divider{
  margin-top:32px;
  margin-bottom:16px;
  margin-left:64px;
  margin-right:64px;
  align-self:stretch;
  height:2px;
  opacity:0.5;
  background-image: linear-gradient(
    to right,
    hsl(from var(--color-text-auto) h s l / 0%) 0%,
    var(--color-text-auto) 10% 90%,
    hsl(from var(--color-text-auto) h s l / 0%) 100%)
}
#footer-content{
  display:flex;
  justify-content:center;
  align-items:center;
  flex-direction:column;
  margin-bottom:16px;
  gap:8px;
}
#footer-text-contact{
  font-weight:700;
}
#footer-sns-buttons{
  display:flex;
  flex-direction:row;
  justify-content:center;
  align-items:center;
  gap:8px;
}
#footer-sns-buttons > a{
  border-radius:4px;
  width:42px;
  height:42px;
  display:flex;
  justify-content:center;
  align-items:center;
  cursor:pointer;
}
#footer-sns-buttons > a > img{
  display:block; /* inline-block can cause weird spacing issues */
}

.dark-mode #footer-sns-buttons > a{
  background-color:var(--template-malang-TWI);
}
.light-mode #footer-sns-buttons > a{
  background-color:var(--template-malang-text);
}

/* Every logo has a different visual size, so it is manually matched here.*/
#footer-sns-button-twitter > img{
  width:60%;
  height:60%;
}
#footer-sns-button-bluesky > img{
  width:70%;
  height:70%;
}
#footer-sns-button-discord > img{
  width:70%;
  height:70%;
}
#footer-sns-button-email > .material-symbols-rounded{
  font-size:32px;
  color:#FFFFFF;
}

#footer-disclaimer{
  text-align:center;
  font-size:0.8em;
  font-weight:400;
}

/* Responsive Section */
/* Targeting down to 300px. */

/* Mobile mode */
@media (width<640px) {
  :root{
    --mcd-width:100vw;
    --mcd-inner-width:100vw;
    --mcd-margin-left:0px;
    --mcd-margin-right:0px;
    --intrologo-center-height-from-top:25svh;
  }
  #main-content-backdrop{
    width:100%;
    margin-left:0;
	margin-right:0;
  }
  #pages-container{
    padding-left:24px;
    padding-right:24px;
    --pages-actual-width:calc(var(--mcd-inner-width) - 48px);
  }
  #scroll-inviter-container{
    top:50lvh;
  }
}

/* Smaller Mobiles */
@media (width<480px) {
}

/* Ridiculously Small Mobiles */
@media (width<360px) {
}

/* Mobile ladder */
/* PC <-640-> Big Mobile <-480-> Small Mobile <-360-> Ridiculous <-300-> I give up */
@media (width>=480px) and (width<640px) {
  /* 640 ~ 480 : Big Mobiles */
}
@media (width>=360px) and (width<480px) {
  /* 480 ~ 360 : Small Mobiles */
}
@media (width<360px) {
  /* 360 ~ 300 : Ridiculously Small Mobiles */
}

